--- a/views/info.erb
+++ b/views/info.erb
@@ -1,27 +1,45 @@
+ <!doctype html>
 <html>
- <head>
- 	<%= include_gon(:int => true) %>
- </head>
-  <body>
-    <center>
-    <!-- pre id returns data base info to view -->
-	  <pre id="display"></pre>
-	  <h1>Welcome to this page</h1>
-	  <h3>Please enter your details!!</h3>
-	  <br><br>
-	  <form method="post" action="details">
-	    <h3>Please Enter Your First Name</h3>
-	      <input type="text" name="first_name"  autofocus="autofocus" required>
-	    <h3>Please Enter Your Last Name</h3>
-	      <input type="text" name="last_name" required>
-        <h3>Please Enter Your Email </h3>
-	      <input type="text" name="email" required>
-		  <br><br><br>
-	    <input type="submit">
-      </form>
-     
-    </center>
-   <script src="//cdn.jsdelivr.net/pouchdb/latest/pouchdb.min.js"></script>
-   <script src="js/info.js"></script>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>PouchDB Intro</title>
+	</head>
+	  <body>
+	    <center><h1>INFO DETAILS</h1>
+		  <form id="formUser" >
+		    <p><label for="inputLast">First Name	</label><input type="text" placeholder="First Name"		name="inputFirst" 	id="inputFirst"> </p>
+			<p><label for="inputFirst">Last Name: </label><input type="text" placeholder="Last Name" 	name="inputLast" 	id="inputLast"></p>
+			<p><label for="inputEmail">Email: 	</label><input type="text" placeholder="Email" 	name="inputEmail" 	id="inputEmail">  </p>
+			<input type="button" value="Submit to Database"  id="btnAddNames">
+			<input type="reset"  value="Clear fields">
+			<input type="button" value="Show Names" id="btnShowNames">
+		  </form></center>
+		<center>
+          	<h3>Please choose a location.</h3>
+           <form>
+            <select name="choose_location" id= "choose_location" class=""   required>
+            <option value="Select">Select</option> 
+            <option value="Location A">Location A</option>
+            <option value="Location B">Location B</option>
+            <option value="Location C">Location C</option>
+            </select>
+             
+            <input onClick="window.location.reload()" type="button" value="Submit Location"  id="btnAddLocations">
+			<input type="reset"  value="Clear fields">
+			<input type="button" value="Show Location" id="btnShowLocation">
+          </form>
+    	</center>
+		<!-- Display results -->
+		<center><div id="divResults"></div></center>
+		<center><div id="divResultsLocation"></div></center>
+		<!-- JavaScript libraries -->
+		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+		<script src="//cdn.jsdelivr.net/pouchdb/latest/pouchdb.min.js"></script>
+        <script src="js/info.js"></script>
+        <script src="js/location.js"></script>
+		
+		
+	
+
+	</body>
 </html>
