combine all docs. Now we can update/add to existing doc.

--- a/views/info.erb
+++ b/views/info.erb
@@ -12,7 +12,7 @@
 			<p><label for="inputEmail">Email: 	</label><input type="text" placeholder="Email" 	name="inputEmail" 	id="inputEmail">  </p>
 			<input type="button" value="Submit to Database"  id="btnAddNames">
 			<input type="reset"  value="Clear fields">
-			<input type="button" value="Show Names" id="btnShowNames">
+			
 		  </form></center>
 		<center>
           	<h3>Please choose a location.</h3>
@@ -24,9 +24,9 @@
             <option value="Location C">Location C</option>
             </select>
              
-            <input onClick="window.location.reload()" type="button" value="Submit Location"  id="btnAddLocations">
+            <input type="button" value="Submit Location"  id="btnUpdateLocations">
 			<input type="reset"  value="Clear fields">
-			<input type="button" value="Show Location" id="btnShowLocation">
+            <input type="button" value="Show Names" id="btnShowNames">
           </form>
     	</center>
 		<!-- Display results -->
@@ -36,7 +36,7 @@
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 		<script src="//cdn.jsdelivr.net/pouchdb/latest/pouchdb.min.js"></script>
         <script src="js/info.js"></script>
-        <script src="js/location.js"></script>
+        
 		
 		
 	
