--- a/views/info.erb
+++ b/views/info.erb
@@ -1,23 +1,28 @@
- <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>PouchDB Intro</title>
-	</head>
-	  <body>
-	    <center><h1>INFO DETAILS</h1>
-		  <form id="formUser" >
-		    <p><label for="inputLast">First Name	</label><input type="text" placeholder="First Name"		name="inputFirst" 	id="inputFirst"> </p>
-			<p><label for="inputFirst">Last Name: </label><input type="text" placeholder="Last Name" 	name="inputLast" 	id="inputLast"></p>
-			<p><label for="inputEmail">Email: 	</label><input type="text" placeholder="Email" 	name="inputEmail" 	id="inputEmail">  </p>
-			<input type="button" value="Submit to Database"  id="btnAddNames">
-			<input type="reset"  value="Clear fields">
-			
-		  </form></center>
-		<center>
-          	<h3>Please choose a location.</h3>
-           <form>
-            <select name="choose_location" id= "choose_location" class=""   required>
+  <head>
+    <meta charset="utf-8">
+    <title>PouchDB Intro</title>
+  </head>
+    <body>
+      <div id= "no_show">
+      <center><h1>INFO DETAILS</h1>
+      <form id="formUser" >
+        <p><label for="inputLast">First Name  </label><input type="text" placeholder="First Name"   name="inputFirst"   id="inputFirst"> </p>
+      <p><label for="inputFirst">Last Name: </label><input type="text" placeholder="Last Name"  name="inputLast"  id="inputLast"></p>
+      <p><label for="inputEmail">Email:   </label><input type="text" placeholder="Email"  name="inputEmail"   id="inputEmail">  </p>
+      <input type="button" value="Submit to Database"  id="btnAddNames">
+      <!-- <input type="button"  value="Hide" id= 'clockButton'> -->
+      
+      </form>
+        <button onclick="toggleHide(2)" id="clockButton">Show Form</button>
+      </div>
+    </center>
+    <br><br>
+    <center>
+                <div id="formUser2">
+            <h3>Please choose a location.</h3>
+           <form >
+            <select name="choose_location" id= "choose_location" required>
             <option value="Select">Select</option> 
             <option value="Location A">Location A</option>
             <option value="Location B">Location B</option>
@@ -25,21 +30,55 @@
             </select>
              
             <input type="button" value="Submit Location"  id="btnUpdateLocations">
-			<input type="reset"  value="Clear fields">
-            <input type="button" value="Show Names" id="btnShowNames">
+      <input type="reset"  value="Clear fields">
+            <input type="button" value="Show Table Info" id="btnShowNames">
           </form>
-    	</center>
-		<!-- Display results -->
-		<center><div id="divResults"></div></center>
-		<center><div id="divResultsLocation"></div></center>
-		<!-- JavaScript libraries -->
-		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-		<script src="//cdn.jsdelivr.net/pouchdb/latest/pouchdb.min.js"></script>
-        <script src="js/info.js"></script>
-        
-		
-		
-	
+          <button onclick="toggleHide(3)" id="clockButton">Show Form</button>
+        </div>
+          
+           <div id= "formUser3">
+      <center><h1>INFO DETAILS</h1>
+      <form id="formUser" >
+        <p><label for="inputLast">Test Info for div  </label><input type="text" placeholder="First Name"   name="inputFirst"   id="inputFirst"> </p>
+      <p><label for="inputFirst">some thing here: </label><input type="text" placeholder="Last Name"  name="inputLast"  id="inputLast"></p>
+      <p><label for="inputEmail">Again info: </label><input type="text" placeholder="Email"  name="inputEmail"   id="inputEmail">  </p>
+      <input type="button" value="Submit to Database"  id="btnAddNames">
+      <!-- <input type="button"  value="Hide" id= 'clockButton'> -->
+      
+      </form>
+         <button onclick="toggleHide(1)" id="clockButton">Show Form</button>
+      </div>
 
-	</body>
+
+
+
+         
+      
+
+
+
+      <br><br>
+        <h3>Please choose a Photo.</h3>
+        <div class="fcmargin fcmargin1 pmmargin">
+            <div id="">Please upload a File
+              <input type="file" id="inputFile" accept="image/*" capture="camera">
+              <input type="text" id="ec" value="look" >
+             
+             <div>&nbsp;</div>
+           </div>
+            <div class="btmargin">
+              <button class="btn btn-primary btnsize" id="btnUpdatePhoto"> Upload</button>
+            </div>
+        </div> 
+      </center>
+    <!-- Display results -->
+    <center><div id="divResults"></div></center>
+    <center><div id="divResultsLocation"></div></center>
+    <link href="css/style.css" rel="stylesheet">
+    <!-- JavaScript libraries -->
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="//cdn.jsdelivr.net/pouchdb/latest/pouchdb.min.js"></script>
+    <script src="js/info.js"></script>
+        
+  </body>
 </html>
